[gd_scene load_steps=3 format=3 uid="uid://fxwcfnsk0rgt"]

[ext_resource type="Texture2D" uid="uid://beeog2d8ijh8s" path="res://assets/icons/minus.png" id="1_f8c4n"]
[ext_resource type="Script" path="res://ui/dialogs/diff_window.gd" id="1_llhoe"]

[node name="DiffWindow" type="Window"]
title = "Calculate Diff"
position = Vector2i(0, 36)
size = Vector2i(600, 334)
wrap_controls = true
script = ExtResource("1_llhoe")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -142.5
offset_right = 142.0
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FirstXML" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_f8c4n")

[node name="SecondXML" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "IoU Threshold: "

[node name="IOUThresholdRange" type="SpinBox" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="GridContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "Include: "

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "Symbol"

[node name="IncludeSymbolCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
button_pressed = true

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "Text"

[node name="IncludeTextCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
button_pressed = true

[node name="GridContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer4"]
layout_mode = 2
text = "Compare: "

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer4"]
layout_mode = 2
text = "String"

[node name="CompareStringCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer4"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer4"]
layout_mode = 2
text = "Degree"

[node name="CompareDegreeCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer4"]
layout_mode = 2
button_pressed = true

[node name="GridContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="OKButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer5"]
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer5"]
layout_mode = 2
text = "Cancel"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GridContainer2/IncludeTextCheckbox" to="." method="_on_include_text_checkbox_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer5/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer5/CancelButton" to="." method="_on_cancel_button_pressed"]
